[gd_scene load_steps=8 format=3 uid="uid://byqhr4x0hsswx"]

[ext_resource type="Script" path="res://scenes/inventory/inventory.gd" id="1_q67r7"]
[ext_resource type="Resource" uid="uid://dqsu2o07mbxkq" path="res://scenes/inventory/item/axe.tres" id="2_336ey"]
[ext_resource type="Texture2D" uid="uid://brrr2wttetm13" path="res://sprite/ui/GUI_4x copy 2.png" id="2_ilagm"]
[ext_resource type="Resource" uid="uid://ccaug1oxpv4fa" path="res://scenes/inventory/item/sword.tres" id="3_5nlbt"]
[ext_resource type="PackedScene" uid="uid://bsntxtw8yqwu1" path="res://scenes/inventory/hot_bar.tscn" id="5_nkeag"]
[ext_resource type="Texture2D" uid="uid://di1e0pui75log" path="res://sprite/ui/BG.png" id="6_ijko4"]
[ext_resource type="PackedScene" uid="uid://bvki7ompmdxcj" path="res://scenes/inventory/inventory_item_detail.tscn" id="6_qek2d"]

[node name="Inventory" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_q67r7")
items = Array[Resource("res://scenes/inventory/item/item.gd")]([ExtResource("2_336ey"), ExtResource("3_5nlbt")])

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -368.5
offset_top = -242.5
offset_right = 368.5
offset_bottom = 242.5
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 13

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
mouse_default_cursor_shape = 13
texture = ExtResource("6_ijko4")

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("2_ilagm")
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="GridContainer" type="GridContainer" parent="MarginContainer/NinePatchRect"]
layout_mode = 2
anchor_left = 0.022
anchor_top = 0.23
anchor_right = 0.022
anchor_bottom = 0.23
offset_left = -0.0580015
offset_top = 0.0499954
offset_right = 418.942
offset_bottom = 347.05
grow_horizontal = 2
grow_vertical = 2
columns = 8

[node name="ItemDetail" parent="MarginContainer/NinePatchRect" instance=ExtResource("6_qek2d")]
layout_mode = 1

[node name="HotBar" parent="MarginContainer/NinePatchRect" instance=ExtResource("5_nkeag")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.162
anchor_right = 0.5
anchor_bottom = 0.162
offset_left = 0.5
offset_top = 0.43
offset_right = 0.5
offset_bottom = 0.43
grow_horizontal = 2
pivot_offset = Vector2(-0.5, -0.5)

[connection signal="change_open" from="." to="." method="_on_change_open"]
